# multi-agent-rag

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.ini  example.py  ingest.py  pyproject.toml  requirements-dev.txt  requirements.txt  router.py
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  research_agent.py
tests/: __init__.py  conftest.py  test_agents.py  test_ingest.py  test_router.py
